[package]
name = "ipam"
version = "0.1.0"
authors = ["Bard <bard@google.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-rt = "4.0.0"
diesel = { version = "1.4.5", features = ["postgres", "sqlite"] }
dotenv = "0.16.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.72"
sqlite = { version = "0.3.23", features = ["bundled"] }
tera = "1.14.0"

[dev-dependencies]
web-sys = "0.3.46"
